Some tweaks suggested by sonar